--- a/css/styles.css
+++ b/css/styles.css
@@ -10132,3 +10132,96 @@ section.resume-section .resume-section-content {
     padding-bottom: 5rem;
   }
 }
+/* ---------------award and certification ---------*/
+
+.custom-award-section {
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+.custom-award-section img {
+    height: auto;
+    max-width: 100%;
+    vertical-align: middle;
+}
+
+.custom-award-section .btn {
+    color: #ffffff;
+    padding: 0.8rem;
+    font-size: 14px;
+    text-transform: uppercase;
+    border-radius: 4px;
+    font-weight: 400;
+    display: block;
+    width: 100%;
+    cursor: pointer;
+    border: 1px solid rgba(255, 255, 255, 0.2);
+    background: #585c68;
+}
+
+.custom-award-section .btn:hover {
+    background-color: rgba(255, 255, 255, 0.12);
+    color: blue;
+    font: bold;
+}
+
+.custom-award-section .cards {
+    display: flex;
+    flex-wrap: wrap;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.custom-award-section .cards_item {
+    display: flex;
+    padding: 1rem;
+}
+
+@media (min-width: 40rem) {
+    .custom-award-section .cards_item {
+        width: 50%;
+    }
+}
+
+@media (min-width: 56rem) {
+    .custom-award-section .cards_item {
+        width: 33.3333%;
+    }
+}
+
+.custom-award-section .card {
+    background-color: white;
+    border-radius: 0.25rem;
+    box-shadow: 0 20px 40px -14px rgba(0, 0, 0, 0.25);
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+}
+
+.custom-award-section .card_content {
+    padding: 1rem;
+    background: white;
+}
+
+.custom-award-section .card_title {
+    color: #dc3545;
+    font-size: 1.1rem;
+    font-weight: 700;
+    letter-spacing: 1px;
+    text-transform: capitalize;
+    /* margin: 0px; */
+    margin-bottom: 0.75rem;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.125);
+}
+
+.custom-award-section .card_text {
+    color: #003957;
+    font-size: 0.875rem;
+    line-height: 1.5;
+    margin-bottom: 1.25rem;
+    font-weight: 400;
+}
+
+
+/* ----x------x-----award and certification -x-----x--------*/
